--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -116,6 +116,8 @@ es:
       create:
         failed: 'Autenticación fallida'
         created: 'Ingreso exitoso'
+      destroy:
+        destroyed: 'Sesión cerrada'  
   shared: 
     header:
       title: 'ADMINISTRACIÓN DE CANCHAS'     
